# SunMath

./: .gitignore  CMakeLists.txt
include/: CommonMacro.h  Duo.hpp  Swizzle.hpp  Tuple.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  countof.hpp  selfaware.hpp
src/: CMakeLists.txt  Swizzle.hpp  Vec.hpp
test/: CMakeLists.txt  factorial.cpp  test_Duo.cpp  test_Swizzle.cpp  test_Tuple.cpp  test_Vec2.cpp  test_Vec2.s  test_countof.cpp
test/case/: test_swizzle.cpp
